# happypto

./: Cargo.toml  README.md
crates/happypto_aptos/: Cargo.toml
crates/happypto_aptos/src/: account.rs  faucet.rs
crates/happypto_evm/: Cargo.toml
crates/happypto_evm/src/: lib.rs  utils.rs  wallet.rs
crates/happypto_hyperliquid/: Cargo.toml
crates/happypto_solana/: Cargo.toml
crates/happypto_solana/src/: wallet.rs
desktop/: Cargo.toml
examples/create_new_wallet_cluster/: Cargo.toml
examples/create_new_wallet_cluster/src/: main.rs
happybot-aptos-tg/: Cargo.toml  README.md
happybot-evm-tg/: Cargo.toml  README.md
happybot-evm-tg/src/: command.rs  error.rs  global.rs  i18n.json  language.rs  main.rs  start.rs  trade.rs  wallet.rs
happybot-solana-tg/: Cargo.toml  README.md
happybot-tg/: Cargo.toml
happypto-rs/: Cargo.toml
happypto-rs/src/: chains.rs  config.rs
happypto_aptos/: Cargo.toml
happypto_aptos/src/: main.rs  transfer.rs
happypto_evm/: Cargo.toml
happypto_evm/src/: main.rs
happypto_hyperliquid/src/: config.rs
happypto_solana/: Cargo.toml
happypto_solana/src/: utils.rs  wallet.rs
src/: aptos.rs  chains.rs  lib.rs  solana.rs
src/aptos/: client.rs  config.rs  mod.rs  rest.rs
src/ethereum/: mod.rs  network.rs  scout.rs
src/solana/: config.rs  mod.rs  network.rs  scout.rs
terminal/: Cargo.toml
terminal/src/: main.rs
