[package]
name = "happypto"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.5.4", features = ["full"] }
tokio = { version = "1.21.0", features = ["full"] }
eyre = "0.6.12"
futures-util = "0.3.31"
rand = "0.7.0"
tempfile = "3.13.0"
anyhow = "1.0.86"
aptos-crypto = {git = "https://github.com/aptos-labs/aptos-core", branch = "devnet"}
aptos-sdk = {git = "https://github.com/aptos-labs/aptos-core", branch = "devnet"}
aptos-types = {git = "https://github.com/aptos-labs/aptos-core", branch = "devnet"}
lazy_static = "1.5.0"
once_cell = "1.19.0"
url = "2.5.2"
reqwest = "0.12.5"
serde_json = "1.0.107"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }