[package]
name = "happypto_aptos"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "a comprehensive SDK in the blockchain field, the functions will cover all common needs in the current blockchain field, for all chains."
keywords = [
  "aptos",
  "blockchain",
]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/happypto"

[lib]
name = "happypto_aptos"

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
tokio = {version = "1.4", features = ["full"]}
anyhow = "1.0.86"
once_cell = "1.19.0"
url = "2.5.2"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }