[package]
name = "happypto_hyperliquid"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "a comprehensive SDK in the blockchain field, the functions will cover all common needs in the current blockchain field, for all chains."
keywords = [
  "hyperliquid",
  "blockchain",
]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/happypto"

[lib]
name = "happypto_hyperliquid"

[dependencies]
hyperliquid_rust_sdk = "0.5.0"
chrono = "0.4.26"
env_logger = "0.10.0"
ethers = {version = "2.0.14", features = ["eip712", "abigen"]}
futures-util = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
lazy_static = "1.3"
log = "0.4.19"
rand = "0.8.5"
reqwest = "0.11.18"
serde = {version = "1.0.175", features = ["derive"]}
serde_json = "1.0.103"
rmp-serde = "1.0.0"
thiserror = "1.0.44"
tokio = {version = "1.29.1", features = ["full"]}
tokio-tungstenite = {version = "0.20.0", features = ["native-tls"]}
uuid = {version = "1.6.1", features = ["v4"]}